@@ -13,3 +13,4 @@ DB:
   - fix for size of evidence of an instance reported incorrectly
   - fix for position resolving of gsm and gps
   - ghost agent is not available anymore
+  - screenshots are configurable during scout creation
